--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,27 +14,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-21 Thu 14:11]
+#+CAPTION: Clock summary at [2019-03-21 Thu 14:45]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *72:28* |       |       | 100.0 |
+| *Total time*                                             | *73:00* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 72:28   |       |       | 100.0 |
-| Active                                                   |         | 72:28 |       | 100.0 |
-| Edit release notes for previous sprint                   |         |       |  2:22 |   3.3 |
-| Sprint and product backlog grooming                      |         |       |  9:57 |  13.7 |
+| Stories                                                  | 73:00   |       |       | 100.0 |
+| Active                                                   |         | 73:00 |       | 100.0 |
+| Edit release notes for previous sprint                   |         |       |  2:22 |   3.2 |
+| Sprint and product backlog grooming                      |         |       |  9:57 |  13.6 |
 | Create a video demo for the sprint's features            |         |       |  3:47 |   5.2 |
 | Make projects directory env optional                     |         |       |  0:10 |   0.2 |
 | Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.0 |
-| Add tests for tracing, reporting and diffing             |         |       |  5:46 |   8.0 |
-| Delete extra files appears broken at present             |         |       |  6:26 |   8.9 |
-| Empty directories should be deleted                      |         |       |  5:37 |   7.8 |
+| Add tests for tracing, reporting and diffing             |         |       |  5:46 |   7.9 |
+| Delete extra files appears broken at present             |         |       |  6:26 |   8.8 |
+| Empty directories should be deleted                      |         |       |  5:37 |   7.7 |
 | Changes to stitch templates are not reported correctly   |         |       |  1:09 |   1.6 |
 | Orchestration test is broken on Windows                  |         |       |  2:40 |   3.7 |
-| Code generation of tests for dogen models                |         |       | 23:22 |  32.2 |
+| Code generation of tests for dogen models                |         |       | 23:22 |  32.0 |
 | Formatters have been incorrectly placed under extraction |         |       |  0:23 |   0.5 |
-| Promote extraction entities to meta-model elements       |         |       | 10:04 |  13.9 |
+| Promote extraction entities to meta-model elements       |         |       | 10:36 |  14.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -894,6 +894,8 @@ Notes:
 
 *** STARTED Promote extraction entities to meta-model elements        :story:
     :LOGBOOK:
+    CLOCK: [2019-03-21 Thu 14:43]--[2019-03-21 Thu 14:45] =>  0:02
+    CLOCK: [2019-03-21 Thu 14:12]--[2019-03-21 Thu 14:42] =>  0:30
     CLOCK: [2019-03-21 Thu 13:09]--[2019-03-21 Thu 14:11] =>  1:02
     CLOCK: [2019-03-21 Thu 11:54]--[2019-03-21 Thu 12:00] =>  0:06
     CLOCK: [2019-03-21 Thu 10:16]--[2019-03-21 Thu 11:53] =>  1:37
