--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-21 Thu 14:45]
+#+CAPTION: Clock summary at [2019-03-21 Thu 14:54]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *73:00* |       |       | 100.0 |
+| *Total time*                                             | *73:08* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 73:00   |       |       | 100.0 |
-| Active                                                   |         | 73:00 |       | 100.0 |
+| Stories                                                  | 73:08   |       |       | 100.0 |
+| Active                                                   |         | 73:08 |       | 100.0 |
 | Edit release notes for previous sprint                   |         |       |  2:22 |   3.2 |
 | Sprint and product backlog grooming                      |         |       |  9:57 |  13.6 |
 | Create a video demo for the sprint's features            |         |       |  3:47 |   5.2 |
@@ -31,10 +31,10 @@
 | Delete extra files appears broken at present             |         |       |  6:26 |   8.8 |
 | Empty directories should be deleted                      |         |       |  5:37 |   7.7 |
 | Changes to stitch templates are not reported correctly   |         |       |  1:09 |   1.6 |
-| Orchestration test is broken on Windows                  |         |       |  2:40 |   3.7 |
+| Orchestration test is broken on Windows                  |         |       |  2:40 |   3.6 |
 | Code generation of tests for dogen models                |         |       | 23:22 |  32.0 |
 | Formatters have been incorrectly placed under extraction |         |       |  0:23 |   0.5 |
-| Promote extraction entities to meta-model elements       |         |       | 10:36 |  14.5 |
+| Promote extraction entities to meta-model elements       |         |       | 10:44 |  14.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -894,6 +894,7 @@ Notes:
 
 *** STARTED Promote extraction entities to meta-model elements        :story:
     :LOGBOOK:
+    CLOCK: [2019-03-21 Thu 14:46]--[2019-03-21 Thu 14:54] =>  0:08
     CLOCK: [2019-03-21 Thu 14:43]--[2019-03-21 Thu 14:45] =>  0:02
     CLOCK: [2019-03-21 Thu 14:12]--[2019-03-21 Thu 14:42] =>  0:30
     CLOCK: [2019-03-21 Thu 13:09]--[2019-03-21 Thu 14:11] =>  1:02
