--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -5,37 +5,38 @@
 
 * Mission Statement
 
-- Finish work on moving decorations to metamodel.
-- Start work on moving profiles to metamodel.
+  - Finish work on moving decorations to metamodel.
+  - Start work on moving profiles to metamodel.
 
 * Stories
 
 ** Active
 
-#+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-25 Mon 11:23]
-| <75>                                   |        |      |      |       |
-| Headline                               | Time   |      |      |     % |
-|----------------------------------------+--------+------+------+-------|
-| *Total time*                           | *1:13* |      |      | 100.0 |
-|----------------------------------------+--------+------+------+-------|
-| Stories                                | 1:13   |      |      | 100.0 |
-| Active                                 |        | 1:13 |      | 100.0 |
-| Edit release notes for previous sprint |        |      | 1:04 |  87.7 |
-| Sprint and product backlog grooming    |        |      | 0:09 |  12.3 |
-#+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
-#+end:
+   #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
+   #+CAPTION: Clock summary at [2019-03-25 Mon 13:16]
+   | <75>                                                   |        |      |      |       |
+   | Headline                                               | Time   |      |      |     % |
+   |--------------------------------------------------------+--------+------+------+-------|
+   | *Total time*                                           | *2:41* |      |      | 100.0 |
+   |--------------------------------------------------------+--------+------+------+-------|
+   | Stories                                                | 2:41   |      |      | 100.0 |
+   | Active                                                 |        | 2:41 |      | 100.0 |
+   | Edit release notes for previous sprint                 |        |      | 1:04 |  39.8 |
+   | Sprint and product backlog grooming                    |        |      | 0:09 |   5.6 |
+   | Create a video demo for the previous sprint's features |        |      | 1:28 |  54.7 |
+      #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
+   #+end:
 
 *** STARTED Edit release notes for previous sprint                    :story:
     :LOGBOOK:
     CLOCK: [2019-03-25 Mon 10:18]--[2019-03-25 Mon 11:22] =>  1:04
     :END:
 
-Add github release notes for previous sprint.
+    Add github release notes for previous sprint.
 
-Title: Dogen v1.0.13, "Clube Náutico"
+    Title: Dogen v1.0.13, "Clube Náutico"
 
-#+begin_src markdown
+    #+begin_src markdown
 ![Clube Náutico](https://restauranteclubenauticomocamedes.files.wordpress.com/2010/07/nautico_023.jpg)
 _Esplanada do Clube Náutico, Moçamedes, Namibe Province, Angola. (C) 2019 [Nautico Club Site](https://restauranteclubenauticomocamedes.wordpress.com)_.
 
@@ -90,11 +91,11 @@ You can download binaries from [Bintray](https://bintray.com/masd-project/main/d
 **Note**: Windows builds are now generated using clang-cl rather than MSVC.
 
 For all other architectures and/or operative systems, you will need to build Dogen from source. Source downloads are available below.
-#+end_src
+    #+end_src
 
-- [[https://twitter.com/MarcoCraveiro/status/1105141000589193216][Tweet]]
-- [[https://www.linkedin.com/feed/update/urn:li:activity:6506470333200023552][LinkedIn]]
-- [[https://gitter.im/MASD-Project/Lobby][Gitter]]
+    - [[https://twitter.com/MarcoCraveiro/status/1105141000589193216][Tweet]]
+    - [[https://www.linkedin.com/feed/update/urn:li:activity:6506470333200023552][LinkedIn]]
+    - [[https://gitter.im/MASD-Project/Lobby][Gitter]]
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
@@ -103,93 +104,97 @@ For all other architectures and/or operative systems, you will need to build Dog
 
 Updates to sprint and product backlog.
 
-*** Create a video demo for the previous sprint's features            :story:
+*** STARTED Create a video demo for the previous sprint's features    :story:
+    :LOGBOOK:
+    CLOCK: [2019-03-25 Mon 12:45]--[2019-03-25 Mon 13:16] =>  0:31
+    CLOCK: [2019-03-25 Mon 11:23]--[2019-03-25 Mon 12:20] =>  0:57
+    :END:
 
 Demo the delete empty directories feature.
 
 *** Promote extraction entities to meta-model elements                :story:
 
-As with mappings, profiles and templates, we should make modelines,
-modeline groups, licences and location strings meta-model elements
-too. It may require a little bit of thinking because they are not
-simple KVPs - but we also have support for arrays in annotations.
+    As with mappings, profiles and templates, we should make modelines,
+    modeline groups, licences and location strings meta-model elements
+    too. It may require a little bit of thinking because they are not
+    simple KVPs - but we also have support for arrays in annotations.
 
-The final destination is for users to create modeline configurations
-or reuse the dogen ones.
+    The final destination is for users to create modeline configurations
+    or reuse the dogen ones.
 
-Notes:
+    Notes:
 
-- In theory we should be able to load modelines incrementally, as they
-  are only needed for code generation. However, order of references
-  will matter because we need to validate references to
-  modelines. Actually this is not a problem because we will process
-  them after merging. Decorations can be generated at the very end.
-- though it is probably overkill, it would be nice to be able to
-  inherit from modelines; then we could define all the common fields
-  on a parent.
-- decoration repository moves to become properties of the model
-  itself.
-- decoration properties becomes just decoration. Can stay property of
-  the element, though perhaps we need to distinguish between
-  decoratable elements and those that are not. Make them optional?
-- modeline_group, modeline, modeline_field, licence_text, marker (real
-  name: location strings) become meta-model entities.
-- decoration is a mapping of meta-type to modeline name. All coding
-  elements for a kernel map to the technical space, except for build
-  files, etc. This could be achieved by adding some meta-data. The
-  good thing about this approach is that we can create a profile for
-  these and make it transparent to users
-  (=masd::standard_modelines=?).
-- decoration of elements must be done after mapping has taken
-  place. We will rely on the output language to determine the correct
-  modeline.
-- due to the fact that fabric types are still not in coding, we need
-  to do decoration expansion as a two-phase process. We need to have
-  the exact same transform present in both generation and coding. This
-  is a bit painful and since its only temporary, a waste of time
-  really. A better alternative would be to move all of fabric types
-  into coding first - the simplest possible way, e.g. copy and paste,
-  rename. We could use the injector as is in fabric. Then as the last
-  step in coding, we could do the decoration transform. A simpler
-  alternative is to just move the dynamic transform chain to
-  coding. This means we don't have to touch fabric at all. We can add
-  it to the post-assembly chain. Then we can execute the decoration
-  transform. It must be done post mapping so that we have a concrete
-  language set on the model. This is required both by the dynamic
-  transform as well as the decoration transform.
+    - In theory we should be able to load modelines incrementally, as they
+      are only needed for code generation. However, order of references
+      will matter because we need to validate references to
+      modelines. Actually this is not a problem because we will process
+      them after merging. Decorations can be generated at the very end.
+    - though it is probably overkill, it would be nice to be able to
+      inherit from modelines; then we could define all the common fields
+      on a parent.
+    - decoration repository moves to become properties of the model
+      itself.
+    - decoration properties becomes just decoration. Can stay property of
+      the element, though perhaps we need to distinguish between
+      decoratable elements and those that are not. Make them optional?
+    - modeline_group, modeline, modeline_field, licence_text, marker (real
+      name: location strings) become meta-model entities.
+    - decoration is a mapping of meta-type to modeline name. All coding
+      elements for a kernel map to the technical space, except for build
+      files, etc. This could be achieved by adding some meta-data. The
+      good thing about this approach is that we can create a profile for
+      these and make it transparent to users
+      (=masd::standard_modelines=?).
+    - decoration of elements must be done after mapping has taken
+      place. We will rely on the output language to determine the correct
+      modeline.
+    - due to the fact that fabric types are still not in coding, we need
+      to do decoration expansion as a two-phase process. We need to have
+      the exact same transform present in both generation and coding. This
+      is a bit painful and since its only temporary, a waste of time
+      really. A better alternative would be to move all of fabric types
+      into coding first - the simplest possible way, e.g. copy and paste,
+      rename. We could use the injector as is in fabric. Then as the last
+      step in coding, we could do the decoration transform. A simpler
+      alternative is to just move the dynamic transform chain to
+      coding. This means we don't have to touch fabric at all. We can add
+      it to the post-assembly chain. Then we can execute the decoration
+      transform. It must be done post mapping so that we have a concrete
+      language set on the model. This is required both by the dynamic
+      transform as well as the decoration transform.
 
-Tasks:
+    Tasks:
 
-- update qname in modeline group to string.
-- implement modeline transform.
-- update name to have dot separated and colon separated qualified
-  names
-- move dynamic transforms into coding again.
-- implement decoration transform in post assembly chain after dynamic
-  transform. Use the qualified name to find the correct modeline.
-- implement the decoration formatters in generation.
-- remvoe legacy decoration code in extraction.
+    - update qname in modeline group to string.
+    - implement modeline transform.
+    - update name to have dot separated and colon separated qualified
+      names
+    - move dynamic transforms into coding again.
+    - implement decoration transform in post assembly chain after dynamic
+      transform. Use the qualified name to find the correct modeline.
+    - implement the decoration formatters in generation.
+    - remvoe legacy decoration code in extraction.
 
-Merged stories:
+    Merged stories:
 
-*Licences as meta-model elements*
+    *Licences as meta-model elements*
 
-Continuing the trend, licences are also moeta-model elements. We can
-use the comments of a class to convey the licence text. The name
-becomes the license name. Users use named configurations to assign
-licences to elements. All artefacts produced across all facets for an
-element will share the same licence. Users can easily add their own
-licence (at whichever level they choose, product line, product,
-component) and then refer to it. The only change is that they must now
-prefix it with the model name (e.g. =masd::licenses::gpl_v2=).
+    Continuing the trend, licences are also moeta-model elements. We can
+    use the comments of a class to convey the licence text. The name
+    becomes the license name. Users use named configurations to assign
+    licences to elements. All artefacts produced across all facets for an
+    element will share the same licence. Users can easily add their own
+    licence (at whichever level they choose, product line, product,
+    component) and then refer to it. The only change is that they must now
+    prefix it with the model name (e.g. =masd::licenses::gpl_v2=).
 
-In theory we should be able to load licences incrementally, as they
-are only needed for code generation. However, order of references will
-matter because we need to validate references to licences.
+    In theory we should be able to load licences incrementally, as they
+    are only needed for code generation. However, order of references will
+    matter because we need to validate references to licences.
 
-We should also allow for both:
+    We should also allow for both:
 
-- full licence: used later at the product level.
-- licence summary: used for preambles in files.
+    - full licence: used later at the product level.
+    - licence summary: used for preambles in files.
 
 ** Deprecated
