--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -12,23 +12,25 @@
 
 ** Active
 
-   #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-   #+CAPTION: Clock summary at [2019-03-25 Mon 13:16]
-   | <75>                                                   |        |      |      |       |
-   | Headline                                               | Time   |      |      |     % |
-   |--------------------------------------------------------+--------+------+------+-------|
-   | *Total time*                                           | *2:41* |      |      | 100.0 |
-   |--------------------------------------------------------+--------+------+------+-------|
-   | Stories                                                | 2:41   |      |      | 100.0 |
-   | Active                                                 |        | 2:41 |      | 100.0 |
-   | Edit release notes for previous sprint                 |        |      | 1:04 |  39.8 |
-   | Sprint and product backlog grooming                    |        |      | 0:09 |   5.6 |
-   | Create a video demo for the previous sprint's features |        |      | 1:28 |  54.7 |
-      #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
-   #+end:
+#+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
+#+CAPTION: Clock summary at [2019-03-25 Mon 15:45]
+| <75>                                                   |        |      |      |       |
+| Headline                                               | Time   |      |      |     % |
+|--------------------------------------------------------+--------+------+------+-------|
+| *Total time*                                           | *5:07* |      |      | 100.0 |
+|--------------------------------------------------------+--------+------+------+-------|
+| Stories                                                | 5:07   |      |      | 100.0 |
+| Active                                                 |        | 5:07 |      | 100.0 |
+| Edit release notes for previous sprint                 |        |      | 1:47 |  34.9 |
+| Sprint and product backlog grooming                    |        |      | 0:09 |   2.9 |
+| Create a video demo for the previous sprint's features |        |      | 3:11 |  62.2 |
+#+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
+#+end:
 
-*** STARTED Edit release notes for previous sprint                    :story:
+*** COMPLETED Edit release notes for previous sprint                  :story:
+    CLOSED: [2019-03-25 Mon 14:43]
     :LOGBOOK:
+    CLOCK: [2019-03-25 Mon 15:01]--[2019-03-25 Mon 15:44] =>  0:43
     CLOCK: [2019-03-25 Mon 10:18]--[2019-03-25 Mon 11:22] =>  1:04
     :END:
 
@@ -36,49 +38,87 @@
 
     Title: Dogen v1.0.13, "Clube Náutico"
 
-    #+begin_src markdown
+#+begin_src markdown
 ![Clube Náutico](https://restauranteclubenauticomocamedes.files.wordpress.com/2010/07/nautico_023.jpg)
-_Esplanada do Clube Náutico, Moçamedes, Namibe Province, Angola. (C) 2019 [Nautico Club Site](https://restauranteclubenauticomocamedes.wordpress.com)_.
+_Esplanada do Náutico Club, Moçamedes, Namibe Province, Angola. (C) 2019 [Nautico Club Site](https://restauranteclubenauticomocamedes.wordpress.com)_.
 
-# Overview
+# Introduction
 
-Sprint 13 offered yet another 2-week effort, with the main emphasis on solving the unit testing of generated code. If you recall, we had some sparse manual tests for these, delightfully called "the canned tests". There weren't brilliant, but provided _some_ coverage. Sadly, we ended up having to disable them due to weird and wonderful failures on OSX and Windows which we could not reproduce on Linux, and were rather difficult to get to the bottom of via CI because of the way the tests were designed. As the next few sprints are all about very (hard-)core changes, we had to make sure a strong testing base is in place before we can proceed with the refactoring. As usual, the work was much harder than expected, taking us two sprints to get into a good place: sprint 12 was all about the system test story, and sprint 13 is all about the unit tests story. Fortunately, we still managed to sneak in one user facing feature, for which there is a simple demo below.
+The sprint cadence seems to finally be establishing itself, with sprint 13 offering yet another solid 2-week effort. The main emphasis was on solving the unit testing of generated code. If you recall, we had some sparse manual tests for these, delightfully called the "canned tests". These weren't exactly brilliant, but did provide _some_ kind of coverage. Sadly, we ended up having to disable them due to weird and wonderful failures on OSX and Windows, which we could not reproduce on Linux and which were rather difficult to get to the bottom of via CI because of the way the tests were designed.
+
+As the next few sprints are all about very (hard-)core changes, we had to make sure a strong testing base is in place before we can proceed with the refactoring. As usual, the work was much harder than expected, taking us the best part of two sprints to get into a good place: sprint 12 was all about the system test story, and sprint 13 is all about the unit tests story. Fortunately, we still managed to sneak in one useful feature.
 
 The below chart breaks down the cost of each story worked percentage-wise in terms of the overall sprint time.
 
-The next sections provide a summary of the most significant stories.
+![Story Pie Chart](https://raw.githubusercontent.com/MASD-Project/dogen/master/doc/agile/v1/sprint_13_pie_chart.jpg)
+
+The next sections provide a summary of the most significant stories. As usual, for more details of the work carried out this sprint, see [the sprint log](https://github.com/MASD-Project/dogen/blob/master/doc/agile/v1/sprint_backlog_13.org).
 
 # Internal Changes
 
-## Code generation of tests for dogen models
-
-This story had started on the previous sprint, but, as always, proved to be much more complicated than anticipated. Though in theory adding tests seems just like adding another facet - and since we have quite a few of these, we were pretty confident - in practice there were subtle differences that caused large problems. These in turn forced some changes to the core of dogen. On the plus side, the pain seems to be worth it, as we are now testing pretty much all facets for all generated objects, across both Dogen itself and the Reference Implementation on all supported platforms, and they are all green:
-
-The downside of it is that the build time has gone up quite considerably, given that we now need to generate the test data facet for all of these types, plus the tests too:
-
-Sadly, as a result of this increase, MSVC is no longer able to complete the builds within the allotted time. Fortunately our clang-cl builds are deemed good enough (only one test failure across some 2.7k tests) so we'll be shipping that to users from now on.
+In this section we cover stories that consumed significant resources but are only visible internally.
 
 ## Sprint and product backlog grooming
 
-In this sprint we spent quite a lot of time grooming the backlogs. This is something which never gets much of a mention, but which I believe is one of the most important aspects of Agile: [you need to keep your product backlog in good shape](http://mcraveiro.blogspot.com/2016/01/nerd-food-on-product-backlogs.html). Perhaps 15% of a sprint may be a tad excessive, but we do have a [hefty product backlog](https://github.com/MASD-Project/dogen/blob/master/doc/agile/product_backlog.org), with over 550 user stories at various levels of detail. Also, given that we have just finished a massive rewrite of the theoretical basis for dogen, it is no surprise that a lot of the stories started to bit-rot. This clean up was mainly to look for low hanging fruit and remove all stories which are completely deprecated; subsequent clean-ups will delve more into the detail of the stories.
+In this sprint we spent quite a lot of time grooming the backlogs. This is something which never gets much of a mention, but which I believe is one of the most important aspects of Agile: [you need to keep your product backlog in good shape](http://mcraveiro.blogspot.com/2016/01/nerd-food-on-product-backlogs.html). Perhaps spending 15% of the total time of a sprint grooming backlogs may sound _a tad_ excessive, but in our defence we do have a [hefty product backlog](https://github.com/MASD-Project/dogen/blob/master/doc/agile/product_backlog.org), with over 550 user stories at various levels of detail. Also, given that we have just finished a massive rewrite of the theoretical basis for Dogen, it is no surprise that a lot of the stories started to bit-rot. This clean up was mainly to look for low hanging fruit and remove all stories which are completely deprecated; subsequent clean-ups will delve more into the detail of the stories.
 
 # User visible changes
 
-There was one user visible change this sprint: handling of empty directories. The sprint demo shows how it works.
+This section covers stories that affect end users. The sprint demo provides a quick demonstration on how the user visible changes; the below sections provide more detail.
 
-[![Sprint 1.0.12 Demo](https://img.youtube.com/vi/Tt34P3JXzeE/0.jpg)](https://www.youtube.com/watch?v=Tt34P3JXzeE)
+[![Sprint 1.0.12 Demo](https://img.youtube.com/vi/yerm2xiKBqA/0.jpg)](https://youtu.be/yerm2xiKBqA)
+
+## Code generation of tests for dogen models
+
+This story had started on the previous sprint, but, as always, proved to be much more complicated than anticipated. Whilst the story is user facing - in that users can enable it for their own models - its purpose is very much just to test the code generator, so its not really that helpful to end users outside of Dogen.
+
+Though in theory adding tests seems just like adding another facet - and since we already have quite a number of these - we were pretty confident this would be a "quick effort". In practice, there were subtle differences with tests that caused large problems. These in turn forced some changes to the core of Dogen. On the plus side, the pain seems to be worth it, as we are now testing pretty much all facets for all generated code, across both Dogen itself and the Reference Implementation on all supported platforms. Even better, they are all green:
+
+![CDash builds](https://raw.githubusercontent.com/MASD-Project/dogen/master/doc/blog/images/cdash_dogen_all_builds.png)
+
+Whilst coverage is extensive, unfortunately we do not yet cover ODB (C++ ORM mapping) nor C# (which still relies on canned tests). In addition, build time has gone up quite considerably, given that we now need to compile the test data facet for all of these types, plus the tests too. The following chart demonstrates this problem:
+
+![Nightly build time](https://raw.githubusercontent.com/MASD-Project/dogen/master/doc/blog/images/dogen_nightly_build_time.png)
+
+As a result of this increase, MSVC is no longer able to complete the builds within the allotted time. Fortunately our clang-cl builds are deemed good enough (only one test failure across some 2.7k tests) so we'll be shipping that to users from now on. In the future we will need to look into ways of decreasing build time, as we are very close to the edge on OSX and clang-cl.
 
 ## Delete empty directories
 
-In the past we used to generate all facets for all models, Dogen and Reference Implementation. However, over time we ended up having to disable most facets as the build time was getting out of control. Dogen correctly deleted all of the generated files when the facets were disabled, but left behind a number of empty directories. Worse: because git does not care about empty directories, we weren't even aware of their existence until some speculative filesystem browsing revealed them. This sprint adds a new knob to delete any empty directory under the project: ```delete_empty_directories```. Together with ```delete_extra_files```, this should mean that most generated lint is taken care of now.
+In the past we used to generate all facets for all models, Dogen and Reference Implementation. However, over time we ended up having to disable most facets as the build time was getting out of control. Dogen correctly deleted all of the generated files when the acets were disabled, but left behind a number of empty directories. Worse: because git does not care about empty directories, we weren't even aware of their existence until some speculative filesystem browsing revealed them. This sprint adds a new knob to delete any empty directory under the project: ```delete_empty_directories```. Together with ```delete_extra_files```, this should mean that most generated lint is taken care of now.
 
 ```
 #DOGEN masd.extraction.delete_extra_files=true
 #DOGEN masd.extraction.delete_empty_directories=true
 ```
+## Rename of extraction fields
+
+One user facing change was actually a bug. Some generation fields had been placed incorrectly in extraction. This was spotted and fixed in this release. The change is not backwards compatible. As an example, a model with the following fields:
+
+```
+#DOGEN masd.extraction.cpp.enabled=true
+#DOGEN masd.extraction.cpp.standard=c++-17
+#DOGEN masd.extraction.cpp.msbuild.enabled=false
+#DOGEN masd.extraction.cpp.visual_studio.project.enabled=false
+#DOGEN masd.extraction.cpp.visual_studio.solution.enabled=false
+#DOGEN masd.extraction.csharp.enabled=false
+```
+
+Now becomes:
+
+```
+#DOGEN masd.generation.cpp.enabled=true
+#DOGEN masd.generation.cpp.standard=c++-17
+#DOGEN masd.generation.cpp.msbuild.enabled=false
+#DOGEN masd.generation.cpp.visual_studio.project.enabled=false
+#DOGEN masd.generation.cpp.visual_studio.solution.enabled=false
+#DOGEN masd.generation.csharp.enabled=false
+```
+
+This change affects all facets in C# and C++, so if you are configuring these directly you will need to manually update your models.
+
 # Next Sprint
 
-We risk repeating the same words as we used on Sprint 12, but here it goes any way: that we have the testing in place, our key objective for next sprint is to move all of the decoration related code into the meta-model. We started work on this in the previous sprint but sadly ran out of time. In addition, we hope to finally make some  inroads against moving annotations to the metamodel. This will be a significant major feature, at long last.
+We risk repeating the same words as we used on Sprint 12, but here it goes anyway: that we have the testing in place, our key objective for next sprint is to move all of the decoration related code into the meta-model. We started work on this in the previous sprint but sadly ran out of time. In addition, we hope to finally make some  inroads against moving annotations to the metamodel. This will be a significant major feature, at long last.
 
 # Binaries
 
@@ -86,16 +126,16 @@ You can download binaries from [Bintray](https://bintray.com/masd-project/main/d
 
 - [dogen_1.0.13_amd64-applications.deb](https://dl.bintray.com/masd-project/main/1.0.13/dogen_1.0.13_amd64-applications.deb)
 - [dogen-1.0.13-Darwin-x86_64.dmg](https://dl.bintray.com/masd-project/main/1.0.13/dogen-1.0.13-Darwin-x86_64.dmg)
-- [dogen-1.0.13-Windows-AMD64.msi](https://dl.bintray.com/masd-project/main/dogen-1.0.13-Windows-AMD64.msi)
+- [dogen-1.0.13-Windows-AMD64.msi](https://dl.bintray.com/masd-project/main/DOGEN-1.0.13-Windows-AMD64.msi)
 
 **Note**: Windows builds are now generated using clang-cl rather than MSVC.
 
 For all other architectures and/or operative systems, you will need to build Dogen from source. Source downloads are available below.
-    #+end_src
+#+end_src
 
-    - [[https://twitter.com/MarcoCraveiro/status/1105141000589193216][Tweet]]
-    - [[https://www.linkedin.com/feed/update/urn:li:activity:6506470333200023552][LinkedIn]]
-    - [[https://gitter.im/MASD-Project/Lobby][Gitter]]
+- [[https://twitter.com/MarcoCraveiro/status/1110195455487631365][Tweet]]
+- [[https://www.linkedin.com/feed/update/urn:li:activity:6515961706701819904/][LinkedIn]]
+- [[https://gitter.im/MASD-Project/Lobby][Gitter]]
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
@@ -104,8 +144,11 @@ For all other architectures and/or operative systems, you will need to build Dog
 
 Updates to sprint and product backlog.
 
-*** STARTED Create a video demo for the previous sprint's features    :story:
+*** COMPLETED Create a video demo for the previous sprint's features  :story:
+    CLOSED: [2019-03-25 Mon 14:43]
     :LOGBOOK:
+    CLOCK: [2019-03-25 Mon 14:44]--[2019-03-25 Mon 15:01] =>  0:17
+    CLOCK: [2019-03-25 Mon 13:17]--[2019-03-25 Mon 14:43] =>  1:26
     CLOCK: [2019-03-25 Mon 12:45]--[2019-03-25 Mon 13:16] =>  0:31
     CLOCK: [2019-03-25 Mon 11:23]--[2019-03-25 Mon 12:20] =>  0:57
     :END:
