--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -13,20 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-27 Wed 11:11]
+#+CAPTION: Clock summary at [2019-03-27 Wed 12:16]
 | <75>                                                   |         |       |      |       |
 | Headline                                               | Time    |       |      |     % |
 |--------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                           | *13:41* |       |      | 100.0 |
+| *Total time*                                           | *14:46* |       |      | 100.0 |
 |--------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                | 13:41   |       |      | 100.0 |
-| Active                                                 |         | 13:41 |      | 100.0 |
-| Edit release notes for previous sprint                 |         |       | 1:47 |  13.0 |
-| Sprint and product backlog grooming                    |         |       | 0:46 |   5.6 |
-| Create a video demo for the previous sprint's features |         |       | 3:11 |  23.3 |
-| Fix issues with emacs                                  |         |       | 2:42 |  19.7 |
-| Create a basic "project plan"                          |         |       | 2:08 |  15.6 |
-| Promote extraction entities to meta-model elements     |         |       | 3:01 |  22.0 |
+| Stories                                                | 14:46   |       |      | 100.0 |
+| Active                                                 |         | 14:46 |      | 100.0 |
+| Edit release notes for previous sprint                 |         |       | 1:47 |  12.1 |
+| Sprint and product backlog grooming                    |         |       | 1:51 |  12.5 |
+| Create a video demo for the previous sprint's features |         |       | 3:11 |  21.6 |
+| Fix issues with emacs                                  |         |       | 2:42 |  18.3 |
+| Create a basic "project plan"                          |         |       | 2:08 |  14.4 |
+| Promote extraction entities to meta-model elements     |         |       | 3:01 |  20.4 |
 | Rename "language" to "technical space"                 |         |       | 0:06 |   0.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -143,6 +143,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2019-03-27 Wed 11:11]--[2019-03-27 Wed 12:16] =>  1:05
     CLOCK: [2019-03-26 Tue 06:15]--[2019-03-26 Tue 06:52] =>  0:37
     CLOCK: [2019-03-25 Mon 10:08]--[2019-03-25 Mon 10:17] =>  0:09
     :END:
